# TaskMorph

./: README.md  pyproject.toml  requirements.txt  setup.py
TaskMorph/: morph.py
lib/TaskMorph/: morph.py
